--- a/verkefni3/main.css
+++ b/verkefni3/main.css
@@ -59,3 +59,5 @@ footer ul{
   display: flex;
   justify-content: space-around;
 }
+
+blockquote{text-align: center; padding: 13px; border: 1px solid;}
