--- a/verkefni3/main3.css
+++ b/verkefni3/main3.css
@@ -18,13 +18,13 @@ body, html {
 
 
 header {
-    grid-area: header;background-image: linear-gradient(#13DB00,#0C7602);
+    grid-area: header;background-image: linear-gradient(#0C7602,#13DB00); padding: 3em;
 
 }
-header h1{font-size: 3em; font-family: fantasy; text-align: center;color: #00360B;}
+header h1{font-size: 3em;font-family: 'Ultra', serif;; text-align: center;color: #00360B;}
 header a{display: block; text-align: center;}
-nav { grid-area:nav; background-color: #7C7B45
- padding: 2em; }
+nav { grid-area:nav; background-color: black
+ padding: 2em; margin: 1.5em; }
 
 aside {
     grid-area: sect1;
@@ -34,12 +34,12 @@ aside {
 
 main {
     grid-area: main;
-; padding:15px; background-color: green
+; padding:15px; background-color: #13DB00;font-family: 'Luckiest Guy', cursive;
 }
-article {grid-area: sect2; 
+article {grid-area: sect2; background-color: #13DB00;font-family: 'Luckiest Guy', cursive;
 ;padding: 15px}
 footer {
-    grid-area: footer;
+    grid-area: footer; background-image: linear-gradient(#13DB00,#0C7602);
 
 }
 
@@ -60,6 +60,7 @@ footer ul{
   justify-content: space-around;
 }
 
-blockquote{text-align: center; padding: 13px; border: 1px solid;}
+blockquote{text-align: center; padding: 13px; border: 1px solid; font-family: cursive;}
 
-body{background-color: #0C7602}
+body{background-color: #0C7602;}
+
