--- a/verkefni3/main4.css
+++ b/verkefni3/main4.css
@@ -20,14 +20,14 @@ body, html {
 header {
     grid-area: header;background-image: linear-gradient(to right,#CA9900, red,orange,yellow,green,blue,indigo,violet,#CA9900);
 }
-header h1{font-size: 3em; font-family: fantasy; text-align: center;color: white}
+header h1{font-size: 3em; font-family: 'Shadows Into Light', cursive;font-size: ; text-align: center;color: white}
 header a{display: block; text-align: center;}
 nav { grid-area:nav;  
  padding: 2em;background-image: linear-gradient(to right, #CA9900,yellow,#CA9900);}
 
 main {
     grid-area: main;
-; padding:15px; background-image: radial-gradient(circle, red, yellow, green); font-family: 'Mansalva', cursive;
+; padding:15px; background-image: radial-gradient(circle, red, yellow, green);font-family: 'Shadows Into Light', cursive;
 }
 footer {
     grid-area: footer;background-image: linear-gradient(to right, #CA9900,yellow,#CA9900);
@@ -51,7 +51,7 @@ footer ul{
   justify-content: space-around;
 }
 
-blockquote{text-align: center; padding: 13px; border: 1px solid;}
+blockquote{text-align: center; padding: 13px; border: 1px solid; font-family: serif;}
 
 body{background-color: #CA9900}
 
@@ -59,3 +59,4 @@ h3{text-align: center;
 }
 
 main ul{text-align: center;list-style: none}
+
