--- a/verkefni4/main2.css
+++ b/verkefni4/main2.css
@@ -1,4 +1,4 @@
-body{background-color: #0272db; width: 90%; margin: 0 auto;
+body{background-color: #0272db; width: 70%; margin: 0 auto;
 }
 
 
@@ -18,11 +18,12 @@ body{background-color: #0272db; width: 90%; margin: 0 auto;
 
 
 
-main{background-image: linear-gradient(#ffda6e,#ffe9a8);}
+main{background-image: linear-gradient(#ffda6e,#ffe9a8); padding: 2em;}
 
 
 
 
+blockquote{text-align: center; padding: 20px; background-color: #fff5d9}
 
 
 
