--- a/verkefni4/styles.css
+++ b/verkefni4/styles.css
@@ -14,7 +14,8 @@ h1 {
 
 .verkefni {color: white;}
 
-.topnav {color: white;}
+a {color: white;}
+
 
 .container {
     max-width: 60em; /*960px = fartölvur*/
@@ -46,4 +47,5 @@ blockquote{text-align: center; padding: 20px; background-color: #fff5d9;}
     padding: 0;color: white;}
 
 div h1{color: white;}
+
 
