--- a/verkefni4/styles.css
+++ b/verkefni4/styles.css
@@ -12,7 +12,7 @@ h1 {
 }
 .headsection {width: 100%; background-image: linear-gradient(#ffdd77,#ffe9a8);padding: 2em;}
 
-.verkefni {color: white;font-family: 'Roboto Condensed', sans-serif; text-align: right;
+.verkefni {color: yellow;font-family: 'Roboto Condensed', sans-serif; text-align: right;
 }
 
 a {color: white;font-family: 'Roboto Condensed', sans-serif; text-decoration: none;
@@ -59,5 +59,4 @@ div h1{color: white;}
 
 .copy {text-align: center;}
 
-.topnav {text-align: right; font-size: 20px; padding: 2em; padding-top: 3em}
-
+.topnav {text-align: right; font-size: 20px; padding: 2em; padding-top: 3em;word-spacing: 2.5em}
