--- a/verkefni6/main.css
+++ b/verkefni6/main.css
@@ -1,6 +1,6 @@
 body, html {
     width: 90%;
-    margin: 0 auto; background-color: #FFE6A4
+    margin: 0 auto;
 }
 
 .wrapper{
@@ -21,8 +21,6 @@ header {
     grid-area: header;
 
 }
-header img {width: 15%; position: relative; bottom:50px; left: 43%}
-
 header h1{font-size: 3em; font-family: fantasy; text-align: center;color: brown}
 header a{display: block; text-align: center;}
 nav { grid-area:nav;  
@@ -32,14 +30,11 @@ aside {
     grid-area: sect1;
 ;
 }
-aside img {width: 90%; }
 
-
-ul { list-style-type: none}
 
 main {
     grid-area: main;
-; padding:15px; text-align: center;
+; padding:15px;
 }
 article {grid-area: sect2; 
 ;padding: 15px}
@@ -67,36 +62,32 @@ footer ul{
 
 blockquote{text-align: center; padding: 13px; border: 1px solid;}
 
-main ul {
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-  border: 1px solid #555;
-}
 
-main li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
 
- main li {
-  text-align: center;
-  border-bottom: 1px solid #555;list-style-type: none
+
+ /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width : 600px) {
+  body {background-color: red; }
 }
 
 
-main li a.active {
-  background-color: #4CAF50;
-  color: white;
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  body {background: green;
+}
 }
 
-main li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+ body {background: blue;}main {
+}
 }
 
-iframe {}
 
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+ body {background: orange;}
+} 
