--- a/verkefni6/main.css
+++ b/verkefni6/main.css
@@ -2,7 +2,7 @@ body, html {
     width: 90%;
     margin: 0 auto;
 }
-
+/*
 .wrapper{
     
     display: grid;
@@ -14,7 +14,7 @@ body, html {
     "sect1 main sect2"
     "footer footer footer";
 }
-
+*/
 
 
 header {
@@ -36,8 +36,7 @@ main {
     grid-area: main;
 ; padding:15px;
 }
-article {grid-area: sect2; 
-;padding: 15px}
+article {grid-area: sect2;}
 footer {
     grid-area: footer;
 
@@ -67,7 +66,15 @@ blockquote{text-align: center; padding: 13px; border: 1px solid;}
 
  /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width : 600px) {
-  body {background-color: red; }
+  body {background-color: red;  }
+  .wrapper {display: grid;
+    grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "sect1"
+    "sect2"
+    "footer";}
 }
 
 
@@ -76,18 +83,41 @@ blockquote{text-align: center; padding: 13px; border: 1px solid;}
 @media only screen and (min-width: 600px) {
   body {background: green;
 }
+.wrapper {display: grid;
+    grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "sect1"
+    "sect2"
+    "footer";}
 }
 
 
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
- body {background: blue;}main {
-}
+ body {background: pink;}
+ .wrapper {display: grid;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 20% 10% auto 10%;
+    grid-template-areas:
+    "header header header"
+    "nav nav nav"
+    "sect1 main sect2"
+    "footer footer footer";}
 }
 
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
  body {background: orange;}
+ .wrapper {display: grid;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 20% 10% auto 10%;
+    grid-template-areas:
+    "header header header"
+    "nav nav nav"
+    "sect1 main sect2"
+    "footer footer footer";}
 } 
