--- a/lokaverkefni7/main.css
+++ b/lokaverkefni7/main.css
@@ -1,6 +1,38 @@
-body, html {
-    width: 90%;
-    margin: 0 auto; background-image: url("https://images7.alphacoders.com/890/thumb-1920-890160.jpg");  background-size: 50%;
+body {
+    margin: 0;
+    padding: 0;
+}
+.container {
+    position: relative;
+    width: 100%;
+}
+
+.container .section{
+    position: sticky;
+    top:0;
+    width: 100%;
+    height: 100vh;
+    background: #545252 ;
+}
+
+.container .section:nth-child(1){
+    background: url("https://wallpapercave.com/wp/wp2222328.gif");
+    background-size: cover;
+}
+
+.container .section:nth-child(2){
+    background: url("https://wallpapercave.com/wp/wp2222247.png");
+    background-size: cover;
+}
+
+.container .section:nth-child(3){
+    background: url("https://wallpapercave.com/wp/wp2222246.jpg");
+    background-size: cover;
+}
+
+.container .section:nth-child(4){
+    background: url("https://wallpapercave.com/wp/wp2222215.jpg");
+    background-size: cover;
 }
 
 .wrapper{
@@ -21,23 +53,29 @@ header {
     grid-area: header;
 
 }
-header h1{font-size: 3em; font-family: fantasy; text-align: center;color: brown}
+header h1{font-size: 3em; font-family: fantasy; text-align: center;color: white}
+
 header a{display: block; text-align: center;}
+
 nav { grid-area:nav;  
  padding: 2em; }
 
+h3{text-align: center;}
+
 aside {
-    grid-area: sect1;
-;
+    grid-area: sect1; background: rgba(0,0,0,0.7); color: white;
 }
 
 
 main {
     grid-area: main;
-; padding:15px;
+; padding:15px; background: rgba(0,0,0,0.7); color: white;
 }
+
 article {grid-area: sect2; 
-;padding: 15px}
+;padding: 15px; background: rgba(0,0,0,0.7); color: white;
+}
+
 footer {
     grid-area: footer;
 
