--- a/lokaverkefni7/main.css
+++ b/lokaverkefni7/main.css
@@ -2,6 +2,74 @@ body {
     margin: 0;
     padding: 0;
 }
+
+header {
+    padding: 90px 100px;
+    box-sizing: border-box;
+    background: #545252;
+    height: 0;
+}
+
+.dead {
+    
+    position: relative;
+    right: 100vh;
+    font-size: 40px;
+    display: inline-block;
+    
+
+}
+#logo {
+    width:145px;
+    height:150px;
+    background:url(Video/small\ \ logo\ 2.png) center no-repeat;                           
+    display:block;
+    position: relative;
+    bottom: 70px;
+}
+
+nav {
+    width: 100%;
+    height: 50px;
+    background: rgba(0,0,0,.8);
+    border-top: 1px solid rgba(255,255,255,.2);
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    position: sticky;
+    
+    top: 0;
+    z-index: 1;
+}
+
+nav ul {
+    display: flex;
+    margin: 0;
+    padding: 0 100px;
+    float: right;
+}
+
+nav ul li {
+    list-style: none;
+}
+
+nav ul li a{
+    display: block;
+    color: #696969;
+    padding:  0 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 50px;
+    
+}
+
+nav ul li a:hover{
+    background: #895715;
+}
+
+
+nav ul li a.active {
+    background: #895715;
+}
 .container {
     position: relative;
     width: 100%;
@@ -9,64 +77,86 @@ body {
 
 .container .section{
     position: sticky;
-    top:0;
+    top: 0;
     width: 100%;
     height: 100vh;
     background: #545252 ;
 }
 
 .container .section:nth-child(1){
-    background: url("https://wallpapercave.com/wp/wp2222328.gif");
+    background: url(https://wallpapercave.com/wp/wp2222328.gif);
     background-size: cover;
+    padding:0;
+    margin: 0;
+    display: grid;
 }
 
 .container .section:nth-child(2){
-    background: url("https://wallpapercave.com/wp/wp2222247.png");
+    background: url(Video/tenor.gif);
     background-size: cover;
 }
 
 .container .section:nth-child(3){
-    background: url("https://wallpapercave.com/wp/wp2222246.jpg");
+    background: url(Video/1080p.jfif);
     background-size: cover;
 }
 
 .container .section:nth-child(4){
-    background: url("https://wallpapercave.com/wp/wp2222215.jpg");
+    background: url(https://wallpapercave.com/wp/wp2222213.jpg);
     background-size: cover;
+}
+
+.container .section:nth-child(5){
+    background-size: cover;
+}
+
+#myVideo{
+    width: 100%;
+    height: 800px;
+    object-fit: cover;
+    z-index: -100;
 }
 
 .wrapper{
     
     display: grid;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 20% 60% ;
     grid-template-rows: 20% 10% auto 10%;
     grid-template-areas:
     "header header header"
     "nav nav nav"
-    "sect1 main sect2"
+    "main main main"
     "footer footer footer";
 }
 
 
-.maintexti{font-size: 20px}
+.maintexti{font-size: 30px; text-align: center;}
 
-.maintexti2{font-size: 30px}
+.maintexti2{font-size: 30px; text-align: center;}
 
 
 .transbox{background: rgba(0,0,0,0.7); color: white;}
 
+.transbox h1 {
+    text-align: center;
+}
+
 
 .Behaviour_Interactive_logo{position: relative; left: 150px;}
-header {
-    grid-area: header;
 
-}
+
+.mainnavdonfocked{background: rgba(0,0,0,.8);
+    border-top: 1px solid rgba(255,255,255,.2);
+    border-bottom: 1px solid rgba(255,255,255,.2);}
+
+
+
 header h1{font-size: 3em; font-family: fantasy; text-align: center;color: white}
 
 header a{display: block; text-align: center;}
 
 nav { grid-area:nav;  
- padding: 2em; }
+ }
 
 h3{text-align: center;}
 
@@ -77,34 +167,14 @@ aside {
 
 main {
     grid-area: main;
-; padding:15px; background: rgba(0,0,0,0.7); color: white;
+; padding:15px;
 }
 
 article {grid-area: sect2; 
-;padding: 15px; background: rgba(0,0,0,0.7); color: white;
+;padding: 15px;
 }
 
 footer {
     grid-area: footer;
 
 }
-
-
-nav ul{
-  list-style: none;
-  margin: 0 2px;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-footer ul{
-  list-style: none;
-  margin: 1em 2px;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-blockquote{text-align: center; padding: 13px; border: 1px solid;}
-
