--- a/lokaverkefni7/main.css
+++ b/lokaverkefni7/main.css
@@ -92,21 +92,22 @@ nav ul li a.active {
 }
 
 .container .section:nth-child(2){
-    background: url(Video/tenor.gif);
-    background-size: cover;
+    background: url(https://wallpapercave.com/wp/wp2222247.png);
+    background-size: cover; 
 }
 
 .container .section:nth-child(3){
-    background: url(Video/1080p.jfif);
-    background-size: cover;
-}
-
-.container .section:nth-child(4){
     background: url(https://wallpapercave.com/wp/wp2222213.jpg);
     background-size: cover;
 }
 
+.container .section:nth-child(4){
+    background: url(https://wallpapercave.com/wp/wp2222215.jpg);
+    background-size: cover;
+}
+
 .container .section:nth-child(5){
+    background: url(https://wallpapercave.com/wp/wp2222246.jpg);
     background-size: cover;
 }
 
@@ -116,6 +117,11 @@ nav ul li a.active {
     object-fit: cover;
     z-index: -100;
 }
+
+.survivorfont{font-family: 'Shojumaru', cursive;
+}
+
+.aboutfont{font-family: 'Righteous', cursive;}
 
 .wrapper{
     
@@ -130,7 +136,7 @@ nav ul li a.active {
 }
 
 
-.maintexti{font-size: 30px; text-align: center;}
+.maintexti{font-size: 50px; text-align: center; padding: 1em}
 
 .maintexti2{font-size: 30px; text-align: center;}
 
@@ -138,20 +144,11 @@ nav ul li a.active {
 .transbox{background: rgba(0,0,0,0.7); color: white;}
 
 .transbox h1 {
-    text-align: center;
+    text-align: center; font-size: 80px;
 }
 
 
-.Behaviour_Interactive_logo{position: relative; left: 150px;}
-
-
-.mainnavdonfocked{background: rgba(0,0,0,.8);
-    border-top: 1px solid rgba(255,255,255,.2);
-    border-bottom: 1px solid rgba(255,255,255,.2);}
-
-
-
-header h1{font-size: 3em; font-family: fantasy; text-align: center;color: white}
+header h1{font-size: 3em; text-align: center;color: white}
 
 header a{display: block; text-align: center;}
 
@@ -167,7 +164,7 @@ aside {
 
 main {
     grid-area: main;
-; padding:15px;
+; padding:15px; width: 80%; position: relative; left: 300px;
 }
 
 article {grid-area: sect2; 
