--- a/lokaverkefni7/main.css
+++ b/lokaverkefni7/main.css
@@ -110,6 +110,12 @@ nav ul li a.active {
     background: url(https://wallpapercave.com/wp/wp2222246.jpg);
     background-size: cover;
 }
+.container .section:nth-child(6){
+    background: url(https://wallpapercave.com/wp/wp2222216.jpg);
+    background-size: cover;
+}
+
+
 
 #myVideo{
     width: 100%;
@@ -118,14 +124,16 @@ nav ul li a.active {
     z-index: -100;
 }
 
-.survivorfont{font-family: 'Shojumaru', cursive;
+.survivorfont{font-family: 'Shojumaru', cursive; color: #987C00
 }
 
 .aboutfont{font-family: 'Righteous', cursive;}
 
-.killerfont{font-family: 'Nosifer', cursive;}
+.killerfont{font-family: 'Nosifer', cursive; color: #710000}
 
 .lorefont{font-family: 'New Rocker', cursive;}
+
+.heimildirfont{font-family: 'Aladin', cursive;}
 
 .wrapper{
     
@@ -142,10 +150,12 @@ nav ul li a.active {
 
 .maintexti{font-size: 50px; text-align: center; padding: 1em}
 
-.maintexti2{font-size: 30px; text-align: center;}
+.maintexti2{font-size: 40px; text-align: center;}
 
 
 .transbox{background: rgba(0,0,0,0.7); color: white;}
+
+.transboxdarker{background: rgba(0,0,0,0.9); color: white;}
 
 .transbox h1 {
     text-align: center; font-size: 80px;
@@ -186,3 +196,5 @@ iframe {
   width: 100%;
   height: 100%; 
 }
+
+ul{list-style-type:none;}
