--- a/lokaverkefni7/main.css
+++ b/lokaverkefni7/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
 }
-
+html{scroll-behavior: smooth;}
 header {
     padding: 90px 100px;
     box-sizing: border-box;
@@ -124,16 +124,16 @@ nav ul li a.active {
     z-index: -100;
 }
 
-.survivorfont{font-family: 'Shojumaru', cursive; color: #987C00
+.survivorfont{font-family: 'Shojumaru', cursive; color: #987C00;text-align: center; font-size: 80px;
 }
 
-.aboutfont{font-family: 'Righteous', cursive;}
+.aboutfont{font-family: 'Righteous', cursive; text-align: center; font-size: 80px;}
 
-.killerfont{font-family: 'Nosifer', cursive; color: #710000}
+.killerfont{font-family: 'Nosifer', cursive; color: #710000; text-align: center; font-size: 80px;}
 
-.lorefont{font-family: 'New Rocker', cursive;}
+.lorefont{font-family: 'New Rocker', cursive; text-align: center; font-size: 80px;}
 
-.heimildirfont{font-family: 'Aladin', cursive;}
+.heimildirfont{font-family: 'Aladin', cursive; text-align: center; font-size: 80px;}
 
 .wrapper{
     
@@ -148,16 +148,17 @@ nav ul li a.active {
 }
 
 
-.maintexti{font-size: 50px; text-align: center; padding: 1em}
+.maintexti{font-size: 50px; text-align: center; padding: 1em;}
 
-.maintexti2{font-size: 40px; text-align: center;}
+.maintexti2{font-size: 40px; text-align: center; line-height: 1.5em}
 
+.transboxmain{background: rgba(0,0,0,0.7); color: white; padding-bottom: 5em;padding-right: 5em; padding-left: 5em;
+  border-radius: 50px;}
+.transbox{background: rgba(0,0,0,0.7); color: white;  border-radius: 50px; padding-bottom: 5em}
 
-.transbox{background: rgba(0,0,0,0.7); color: white;}
+.transboxdarker{background: rgba(0,0,0,0.9); color: white; border-radius: 50px; padding-bottom: 5em}
 
-.transboxdarker{background: rgba(0,0,0,0.9); color: white;}
-
-.transbox h1 {
+.transboxmain h1 {
     text-align: center; font-size: 80px;
 }
 
@@ -178,7 +179,7 @@ aside {
 
 main {
     grid-area: main;
-; padding:15px; width: 80%; position: relative; left: 300px;
+; padding:15px; width: 80%; position: relative; left: 170px;
 }
 
 article {grid-area: sect2; 
@@ -198,3 +199,5 @@ iframe {
 }
 
 ul{list-style-type:none;}
+
+footer{text-align: center;size: 30px}
